--- a/Wallet.html
+++ b/Wallet.html
@@ -34,6 +34,9 @@
         }
         p {
             font-size: 18px;
+            word-wrap: break-word; /* Ensure long text wraps to the next line */
+            max-width: 300px; /* Set a maximum width for the address display */
+            margin: 10px auto; /* Center the paragraph */
         }
         footer {
             margin-top: 400px;
@@ -51,9 +54,9 @@
             display: inline-block;
             margin-right: 10px;
         }
-            .footer-nav img {
-                width: 70px; /* Adjust the size of the images */
-                height: 65px; /* Adjust the size of the images */
+        .footer-nav img {
+            width: 70px; /* Adjust the size of the images */
+            height: 65px; /* Adjust the size of the images */
             vertical-align: middle;
         }
     </style>
@@ -107,7 +110,7 @@
             const walletAddressContainer = document.getElementById('walletContainer');
             if (walletAddressContainer) {
                 walletAddressContainer.innerHTML = `
-                    <p>Your saved USDT BEP20 address: ${walletAddress}</p>
+                    <p>Your saved USDT BEP20 address:<br>${walletAddress}</p>
                 `;
             }
         }
