--- a/Wallet.html
+++ b/Wallet.html
@@ -64,7 +64,7 @@
 <body>
 
     <header>
-        <h3>Welcome to your Wallet</h3>
+        <h3>submit your Wallet address</h3>
     </header>
 
     <div id="walletContainer">
