--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <h3><p>Your Hours: <span id="balance">0</span> hours</p></h3>
     </section>
     <section class="centered">
-        <button id="claimButton" onclick="claimHours()">Claim</button>
+        <!-- Replaced the button with an image -->
+        <img id="claimButton" src="hours.png" alt="Claim Hours" onclick="claimHours()">
         <p id="countdown"></p>
     </section>
     <footer>
